--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,21 +9,40 @@ services:
       
     ports:
       - 27017:27017
+
   ai-pm-api:
     restart: always
     platform: linux/amd64
     build:
-      context: ./
-      dockerfile: Dockerfile
-    command: "uvicorn app.api:api --host 0.0.0.0 --reload"
+      context: .
+      dockerfile: backend/Dockerfile
+    command: uvicorn app.api:api --host 0.0.0.0 --port 8000 --reload
     ports:
       - 8000:8000
     depends_on:
       - ai-pm-db
     volumes:
-      - ./:/opt/app:cached
+      - ./backend:/opt/app:cached
     environment:
       - ENVIRONMENT=LOCAL
       - DATABASE_URI=mongodb://root:root@ai-pm-db:27017/
-      - OPENAI_BASE_URL="http://localhost:1234/v1"
+      - OPENAI_BASE_URL=http://localhost:1234/v1
       - OPENAI_API_KEY=lm-studio
+
+  ai-pm-app:
+    restart: always
+    platform: linux/amd64
+    build:
+      context: .
+      dockerfile: frontend/Dockerfile
+    command: npm run start
+    ports:
+      - 8000:8000
+    depends_on:
+      - ai-pm-db
+      - ai-pm-api
+    volumes:
+      - ./frontend:/opt/app:cached
+    environment:
+      - ENVIRONMENT=LOCAL
+      - BASE_API_URI=mongodb://root:root@ai-pm-db:27017/
