--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,9 +5,11 @@
     "Constate",
     "dotenv",
     "fastapi",
+    "fontsource",
     "OPENAI",
     "pydantic",
     "redoc",
+    "roboto",
     "starlette",
     "structlog"
   ]
