--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "cSpell.words": [
     "asignee",
+    "Baisantry",
     "bson",
     "Constate",
     "dotenv",
@@ -10,6 +11,7 @@
     "pydantic",
     "redoc",
     "roboto",
+    "Rohan",
     "starlette",
     "structlog"
   ]
