--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,35 +1,32 @@
 {
   "name": "ai-project-manager-app",
   "version": "0.1.0",
+  "author": {
+    "name": "Rohan Baisantry"
+  },
+  "engines": {
+    "node": "18.15.0"
+  },
   "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview",
-    "type-check": "tsc --noEmit",
-    "format": "prettier --write ./src"
+    "serve": "vite preview"
   },
   "dependencies": {
-    "ra-data-fakerest": "^4.14.0",
-    "ra-input-rich-text": "^4.14.0",
-    "react": "^18.2.0",
-    "react-admin": "^4.14.0",
-    "react-dom": "^18.2.0"
+    "@emotion/react": "latest",
+    "@emotion/styled": "latest",
+    "@mui/material": "latest",
+    "react": "latest",
+    "react-dom": "latest"
   },
   "devDependencies": {
-    "@types/node": "^18.16.1",
-    "@types/react": "^18.0.22",
-    "@types/react-dom": "^18.0.7",
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
-    "@typescript-eslint/parser": "^5.60.1",
-    "@vitejs/plugin-react": "^4.0.1",
-    "eslint": "^8.43.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "gh-pages": "^6.1.0",
-    "prettier": "^2.8.8",
-    "typescript": "^5.1.6",
-    "vite": "^4.3.9"
+    "@vitejs/plugin-react": "latest",
+    "vite": "latest"
+  },
+  "overrides": {
+    "vite": {
+      "rollup": "npm:@rollup/wasm-node"
+    }
   }
 }
