--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,14 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "latest",
-    "@emotion/styled": "latest",
-    "@mui/material": "latest",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.14",
+    "@mui/material": "^5.15.14",
+    "axios": "^1.6.8",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "latest",
@@ -26,7 +29,8 @@
   },
   "overrides": {
     "vite": {
-      "rollup": "npm:@rollup/wasm-node"
+      "rollup": "npm:@rollup/wasm-node",
+      "esbuild": "npm:esbuild-wasm"
     }
   }
 }
