fix: fix docker issue

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,14 +4,13 @@ FROM node:18.15.0
 WORKDIR /opt/app
 
 # Copy package files for dependency management
-COPY frontend/package.json .
-COPY frontend/package-lock.json .
+COPY frontend/package*.json .
 
 # Install the packages declared in package.json or package-lock.json
 RUN npm ci
 
 # Copy project files
-COPY frontend/ .
+COPY frontend/ /opt/app
 
 # Expose the appropriate port
-EXPOSE 5173
+EXPOSE 3000
