fix: fix pre-commit hooks

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,7 +19,7 @@ repos:
     hooks:
       - id: isort
         language_version: python3.11
-        files: ^backend/.*\.py$
+        files: ^backend/.*
 
   # Frontend specific hooks
   - repo: local
