feat: finish backend work with respect to APIs

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -29,3 +29,6 @@ aioconsole = "^0.7.0"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.isort]
+profile = "black"
