--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     environment:
       - MONGO_INITDB_ROOT_USERNAME=root
       - MONGO_INITDB_ROOT_PASSWORD=root
-      
+
     ports:
       - 27017:27017
 
@@ -29,18 +29,17 @@ services:
       - OPENAI_BASE_URL=http://localhost:1234/v1
       - OPENAI_API_KEY=lm-studio
 
-  app:
-    restart: always
-    platform: linux/amd64
-    build:
-      context: .
-      dockerfile: frontend/Dockerfile
-    command: npm run dev
-    ports:
-      - 3000:3000
-    volumes:
-      - ./frontend:/opt/app:cached
-    environment:
-      - ENVIRONMENT=LOCAL
-      - BASE_API_URI=http://localhost:8000
-
+  # app:
+  #   restart: always
+  #   platform: linux/amd64
+  #   build:
+  #     context: .
+  #     dockerfile: frontend/Dockerfile
+  #   command: npm run dev
+  #   ports:
+  #     - 3000:3000
+  #   volumes:
+  #     - ./frontend:/opt/app:cached
+  #   environment:
+  #     - ENVIRONMENT=LOCAL
+  #     - BASE_API_URI=http://localhost:8000
