feat: update fe

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "cSpell.words": [
-    "asignee",
+    "assignee",
     "Baisantry",
     "bson",
     "Constate",
@@ -13,6 +13,7 @@
     "redoc",
     "roboto",
     "Rohan",
+    "Signup",
     "starlette",
     "structlog"
   ]
