--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,6 +17,7 @@ requests = "^2.31.0"
 pydantic = "^2.6.4"
 pydantic-settings = "^2.2.1"
 gunicorn = "^21.2.0"
+aiocron = "^1.8"
 
 
 [tool.poetry.group.development.dependencies]
